[gd_scene load_steps=50 format=2]

[ext_resource path="res://assets/mapas/fase4.png" type="Texture" id=1]
[ext_resource path="res://assets/Ui/fundonovocimad.jpeg" type="Texture" id=2]
[ext_resource path="res://scripts/Dialog1_0.gd" type="Script" id=3]
[ext_resource path="res://assets/aúdios/botões no pause.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/fontes/VT323-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/Ui/chat_decision.png" type="Texture" id=6]
[ext_resource path="res://assets/characters/Character_023.png" type="Texture" id=7]
[ext_resource path="res://assets/Ui/back_transparent.png" type="Texture" id=8]
[ext_resource path="res://scripts/fase_4/fase_4.gd" type="Script" id=9]
[ext_resource path="res://assets/buttons/fase5bot.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/voltarfasebot.png" type="Texture" id=11]
[ext_resource path="res://assets/buttons/voltardecisbot.png" type="Texture" id=12]
[ext_resource path="res://assets/buttons/voltarfasebotp.png" type="Texture" id=13]
[ext_resource path="res://assets/Ui/telaconteudoserro.png" type="Texture" id=14]
[ext_resource path="res://assets/buttons/voltardecisbotp.png" type="Texture" id=15]
[ext_resource path="res://assets/Ui/errou_conteúdo.png" type="Texture" id=16]
[ext_resource path="res://assets/aúdios/Music_Game_-_5.mp3" type="AudioStream" id=17]
[ext_resource path="res://assets/Ui/telaconteudosacerto.png" type="Texture" id=18]
[ext_resource path="res://assets/mapas/cadeiracostasfase4.png" type="Texture" id=19]
[ext_resource path="res://assets/fontes/Stacked pixel.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://assets/Ui/setacadeira.png" type="Texture" id=21]
[ext_resource path="res://assets/characters/rafaProtagonista.png" type="Texture" id=22]
[ext_resource path="res://players/fase_2/fase2_rafa_protagonista.gd" type="Script" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 317, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 93, 85 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22, 49 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 229, 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13, 109 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 49, 16 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 25, 10 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 25, 10 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 52, 46.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 24, 24 )

[sub_resource type="Animation" id=12]
resource_name = "movendo"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 5 ), Vector2( 4, 3 ), Vector2( 4, 5 ), Vector2( 4, 3 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "andandobaixo"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=20]
resource_name = "andandocima"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=21]
resource_name = "andandoladod"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=22]
resource_name = "andandoladoe"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=23]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=24]
resource_name = "idlecima"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 49 ]
}

[sub_resource type="Animation" id=25]
resource_name = "idleladoe"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=26]
resource_name = "parada"

[sub_resource type="CapsuleShape2D" id=27]
radius = 11.0
height = 10.0

[sub_resource type="Animation" id=16]
resource_name = "cimabaixo"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 539, 204 ), Vector2( 539, 200 ) ]
}

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 27.3523, 36.3045 )

[sub_resource type="DynamicFont" id=13]
size = 18
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=14]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 20 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 9 )

[node name="cenario" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="fundo" type="Sprite" parent="cenario"]
position = Vector2( 320, 180 )
scale = Vector2( 0.622708, 0.61 )
texture = ExtResource( 2 )

[node name="cenafase4" type="Sprite" parent="cenario"]
position = Vector2( 320, 192 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="cenario/cenafase4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cenario/cenafase4/StaticBody2D"]
position = Vector2( -5, -81 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="cenario/cenafase4/StaticBody2D"]
position = Vector2( -229, 67 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="cenario/cenafase4/StaticBody2D"]
position = Vector2( -120, 64 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="cenario/cenafase4/StaticBody2D"]
position = Vector2( 91, 139 )
shape = SubResource( 4 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="cenario/cenafase4/StaticBody2D"]
position = Vector2( 317, 32 )
shape = SubResource( 5 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="cenario/cenafase4/StaticBody2D"]
position = Vector2( 15, 40 )
shape = SubResource( 6 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="cenario/cenafase4/StaticBody2D"]
position = Vector2( 15, 8 )
shape = SubResource( 7 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="cenario/cenafase4/StaticBody2D"]
position = Vector2( 15, 80 )
shape = SubResource( 8 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="cenario/cenafase4/StaticBody2D"]
position = Vector2( 186, 74.5 )
shape = SubResource( 9 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="cenario/cenafase4/StaticBody2D"]
position = Vector2( 259, 52 )
shape = SubResource( 11 )

[node name="dialogo_1" type="Control" parent="."]
visible = false
margin_left = 52.0
margin_top = -30.0
margin_right = 92.0
margin_bottom = 10.0

[node name="Dialog1_0" type="ColorRect" parent="dialogo_1"]
margin_left = -47.0
margin_top = 228.0
margin_right = 111.0
margin_bottom = 379.0
color = Color( 0.223529, 0.25098, 0.27451, 1 )
script = ExtResource( 3 )
dialogPath = "res://dialogos/dialog7.tres"

[node name="Name" type="RichTextLabel" parent="dialogo_1/Dialog1_0"]
margin_left = 4.0
margin_top = 4.0
margin_right = 88.0
margin_bottom = 33.0
custom_colors/default_color = Color( 1, 1, 1, 1 )

[node name="Text" type="RichTextLabel" parent="dialogo_1/Dialog1_0"]
margin_left = 7.0
margin_top = 31.0
margin_right = 125.0
margin_bottom = 137.0
custom_colors/default_color = Color( 1, 1, 1, 1 )

[node name="Indicator" type="Polygon2D" parent="dialogo_1/Dialog1_0"]
position = Vector2( 4, 5 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 145, 133, 135, 133, 140, 140, 141.703, 137.615 )

[node name="poligono" type="AnimationPlayer" parent="dialogo_1/Dialog1_0/Indicator"]
autoplay = "movendo"
anims/movendo = SubResource( 12 )

[node name="Timer" type="Timer" parent="dialogo_1/Dialog1_0"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="dialogo_1/Dialog1_0"]
stream = ExtResource( 4 )

[node name="personagens" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="personagens"]
position = Vector2( 539, 267 )
scale = Vector2( 2.79167, 2.95834 )
texture = ExtResource( 7 )
hframes = 16
vframes = 4
frame = 49

[node name="cadeiracostas" type="Sprite" parent="personagens"]
position = Vector2( 539, 287 )
texture = ExtResource( 19 )

[node name="fase1_rafa_protagonista" type="KinematicBody2D" parent="personagens"]
position = Vector2( 23, 171 )
script = ExtResource( 23 )

[node name="sprite" type="Sprite" parent="personagens/fase1_rafa_protagonista"]
position = Vector2( -43, -29 )
scale = Vector2( 2.24983, 2.24983 )
texture = ExtResource( 22 )
hframes = 16
vframes = 4

[node name="anim" type="AnimationPlayer" parent="personagens/fase1_rafa_protagonista"]
anims/andandobaixo = SubResource( 19 )
anims/andandocima = SubResource( 20 )
anims/andandoladod = SubResource( 21 )
anims/andandoladoe = SubResource( 22 )
anims/idle = SubResource( 23 )
anims/idlecima = SubResource( 24 )
anims/idleladoe = SubResource( 25 )
anims/parada = SubResource( 26 )

[node name="collision" type="CollisionShape2D" parent="personagens/fase1_rafa_protagonista"]
position = Vector2( -43, -22 )
shape = SubResource( 27 )

[node name="icone_mesa" type="Sprite" parent="."]
position = Vector2( 539, 201.905 )
rotation = 1.5708
scale = Vector2( 0.162022, 0.165269 )
texture = ExtResource( 21 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="icone_mesa"]
autoplay = "cimabaixo"
anims/cimabaixo = SubResource( 16 )

[node name="Area2D" type="Area2D" parent="icone_mesa"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="icone_mesa/Area2D"]
position = Vector2( -122.855, -96.8113 )
shape = SubResource( 17 )

[node name="quest_decision" type="Control" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0

[node name="blush" type="TextureRect" parent="quest_decision"]
margin_left = -8.0
margin_top = -8.0
margin_right = 648.0
margin_bottom = 376.0
texture = ExtResource( 8 )
expand = true

[node name="sprite" type="Sprite" parent="quest_decision"]
position = Vector2( 88.0001, 40 )
scale = Vector2( 6.45816, 6.45816 )
texture = ExtResource( 7 )
hframes = 16
vframes = 4

[node name="chat" type="TextureRect" parent="quest_decision"]
margin_left = 22.0
margin_top = 16.0
margin_right = 634.0
margin_bottom = 364.0
texture = ExtResource( 6 )
expand = true

[node name="quiz" type="Control" parent="quest_decision"]
margin_right = 40.0
margin_bottom = 40.0

[node name="pergunta" type="Label" parent="quest_decision/quiz"]
margin_left = 104.0
margin_top = 110.0
margin_right = 553.0
margin_bottom = 221.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Você fez seu trabalho com dedicação, além de trazer inovações importantes para o projeto, porém  só elencou as falhas e defeitos sem notar seu esforço. Qual a gestão nessa situação? 
"
autowrap = true

[node name="quest" type="Control" parent="quest_decision/quiz"]
margin_left = 104.0
margin_top = 179.0
margin_right = 144.0
margin_bottom = 219.0

[node name="wrong" type="Button" parent="quest_decision/quiz/quest"]
margin_right = 435.0
margin_bottom = 41.0
align = 2

[node name="pergunta" type="Label" parent="quest_decision/quiz/quest"]
margin_left = 4.0
margin_top = -2.0
margin_right = 431.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 13 )
text = "Você mostra para a Claudia que fez o seu trabalho bem, e espera para ver o que ela irá falar. "
autowrap = true

[node name="quest2" type="Control" parent="quest_decision/quiz"]
margin_left = 104.0
margin_top = 231.0
margin_right = 144.0
margin_bottom = 271.0

[node name="right" type="Button" parent="quest_decision/quiz/quest2"]
margin_right = 435.0
margin_bottom = 41.0
align = 2

[node name="pergunta" type="Label" parent="quest_decision/quiz/quest2"]
margin_left = 4.0
margin_top = -2.0
margin_right = 431.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 13 )
text = "Você agradece o feedback da Claudia e pede para ela comentar quais partes do trabalho ela gostou. "
autowrap = true

[node name="right" type="Control" parent="quest_decision/quiz"]
margin_left = 104.0
margin_top = 283.0
margin_right = 144.0
margin_bottom = 323.0

[node name="wrong" type="Button" parent="quest_decision/quiz/right"]
margin_right = 435.0
margin_bottom = 41.0
align = 2

[node name="pergunta" type="Label" parent="quest_decision/quiz/right"]
margin_left = 4.0
margin_top = -2.0
margin_right = 431.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 13 )
text = "Você pergunta qual era a expectativa dela com esse projeto e mostra qual foi o seu entendimento do projeto. "
autowrap = true

[node name="wrong_decision" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="FundoJogo21" type="Sprite" parent="wrong_decision"]
position = Vector2( 320, 175 )
scale = Vector2( 1.02969, 1.00688 )
texture = ExtResource( 14 )

[node name="img_wrong_decision" type="TextureRect" parent="wrong_decision"]
margin_left = 34.0
margin_top = 112.0
margin_right = 636.0
margin_bottom = 454.0
texture = ExtResource( 16 )
expand = true

[node name="LinkButton" type="LinkButton" parent="wrong_decision"]
margin_left = 54.0
margin_top = 186.0
margin_right = 486.0
margin_bottom = 220.0
focus_mode = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Clique aqui para acessar o conteúdo."
underline = 1

[node name="back_phase" type="TextureButton" parent="wrong_decision"]
margin_left = 67.0
margin_top = 254.0
margin_right = 262.0
margin_bottom = 297.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 13 )
expand = true

[node name="back_decision" type="TextureButton" parent="wrong_decision"]
margin_left = 390.0
margin_top = 254.0
margin_right = 581.0
margin_bottom = 294.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 15 )
expand = true

[node name="right_decision" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="FundoJogo21" type="Sprite" parent="right_decision"]
position = Vector2( 319, 180 )
scale = Vector2( 1.01564, 1.03297 )
texture = ExtResource( 18 )

[node name="video_conteudo" type="VideoPlayer" parent="right_decision"]
margin_left = 56.0
margin_top = 136.0
margin_right = 560.0
margin_bottom = 304.0
autoplay = true

[node name="LinkButton2" type="LinkButton" parent="right_decision"]
margin_left = 68.0
margin_top = 185.0
margin_right = 500.0
margin_bottom = 219.0
focus_mode = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "Clique aqui para acessar o conteúdo."
underline = 1

[node name="next_phase" type="TextureButton" parent="right_decision"]
margin_left = 382.0
margin_top = 248.0
margin_right = 459.0
margin_bottom = 289.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
expand = true

[node name="back_phase" type="TextureButton" parent="right_decision"]
margin_left = 112.0
margin_top = 251.0
margin_right = 307.0
margin_bottom = 294.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 13 )
expand = true

[node name="missão" type="Label" parent="."]
margin_left = 305.0
margin_top = 41.0
margin_right = 768.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
text = "converse com claudia"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
autoplay = true

[node name="botsaudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="body_entered" from="icone_mesa/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="pressed" from="quest_decision/quiz/quest/wrong" to="." method="_on_wrong_pressed"]
[connection signal="pressed" from="quest_decision/quiz/quest2/right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="quest_decision/quiz/right/wrong" to="." method="_on_wrong_pressed"]
[connection signal="pressed" from="wrong_decision/back_phase" to="." method="_on_back_phase_pressed"]
[connection signal="pressed" from="wrong_decision/back_decision" to="." method="_on_back_decision_pressed"]
[connection signal="pressed" from="right_decision/next_phase" to="." method="_on_next_phase_pressed"]
[connection signal="pressed" from="right_decision/back_phase" to="." method="_on_back_phase_pressed"]
